# gan-image-studio

./: .env.example  .gitignore  PRODUCT.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: supabase-setup.md
gan_image_studio/: __init__.py  api.py  app.py  checkpoints.py  cli.py  config.py  data.py  evaluation.py  inference.py  models.py  plotting.py  storage.py  supabase_client.py  training.py  utils.py
scripts/: provision-supabase.ts  verify-site.mjs  verify-supabase.ts
site/: index.html  script.js  styles.css
supabase/: config.toml  seed.sql
supabase/functions/checkpoint-upload/: index.ts
supabase/migrations/: 20260618220129_init_gan_image_studio_schema.sql
supabase/tests/: schema_rls_test.sql
tests/: test_app.py  test_checkpoints.py  test_config.py  test_data.py  test_evaluation.py  test_inference.py  test_models.py  test_scripts.py  test_storage.py  test_supabase_gateway.py  test_supabase_sql.py  test_training.py
