[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gan-image-studio"
version = "0.1.0"
description = "A reproducible DCGAN training studio with Supabase-backed artifact tracking."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Gabriel Grasele" }]
dependencies = [
  "fastapi>=0.116",
  "gradio>=5.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pillow>=10.4",
  "pydantic>=2.8",
  "supabase>=2.6",
  "tensorboard>=2.17",
  "torch>=2.5",
  "torchvision>=0.20",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.scripts]
gan-studio = "gan_image_studio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gan_image_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
